# CodeLattice

./: .gitignore  CodeLattice.cabal  CodeLattice.leo  CodeLattice.mm  Setup.hs  results-database.sql.xz  results-database.sqlite3.xz  results-postgresql-database.backup  results-postgresql-database.sql.xz
results/truncated hextille/: TruncatedHextille.hs  build-diamond-lattice.hs  build-hexagonal-lattice.hs  build-rectangular-lattice.hs  build-tilted-rectangular-lattice.hs  build-uneven-rectangular-lattice.hs  dodecagon  single-dodecagon-input  winning-labeling
scripts/: count-labelings.hs  count-physical-qubits-for-everything.hs  count-physical-qubits.hs  draw-labeled-tiling.hs  draw-lattice.hs  draw-tiling.hs  generate-lattices.hs  generate-periodic-lattices.hs  plot-all-tilings-results.hs  plot-tiling-results.hs  scan-lattice.hs  scan.hs  show-latex-combinatorics-table.hs  show-lattice-edges-with-labelings.hs  solve-lattice-for-labeling.hs
sources/: CodeLattice.hs
sources/C/: codequery.cc
sources/CodeLattice/: Database.hs  Discrete.hs  Labeling.hs  Periodic.hs  Scanning.hs  Tilings.hs
sources/CodeLattice/Scanning/: C.cc
sources/Data/: EpsilonMatcher.hs
sources/Data/EpsilonMatcher/: Multiple.hs
tests/: test.hs
