-- @+leo-ver=4-thin
-- @+node:gcross.20100302201317.1387:@thin CodeLattice.cabal
-- @@language Haskell
Name:           CodeLattice
Version:        0.1
Cabal-Version:  >= 1.6
Build-Type:     Custom

Library
    Build-Depends:  Blueprint >= 0.2,
                    base == 4.1.*,
                    containers == 0.2.*,
                    random == 1.0.*,
                    mtl == 1.1.*,
                    array == 0.2.*,
                    EpsilonMatcher == 0.1,
                    bimap == 0.2.*,
                    uuid == 1.*,
                    Takusen == 0.8.*,
                    ConfigFile == 1.0.*,
                    Vec == 0.9.*,
                    NDArray == 0.1,
                    filepath == 1.1.*

    Extra-Libraries: stdc++


-- @-node:gcross.20100302201317.1387:@thin CodeLattice.cabal
-- @-leo
