-- @+leo-ver=4-thin
-- @+node:gcross.20100302201317.1387:@thin CodeLattice.cabal
-- @@language Haskell
Name:           CodeLattice
Version:        0.1
Cabal-Version:  >= 1.6
Build-Type:     Custom

Library
    Build-Depends:  Blueprint >= 0.2,
                    base >= 4.1 && < 5,
                    containers >= 0.2 && < 0.4,
                    random == 1.0.*,
                    transformers >= 0.2 && < 0.3,
                    mtl >= 1.1 && < 1.2,
                    array >= 0.2 && < 0.4,
                    bimap == 0.2.*,
                    uuid == 1.*,
                    Takusen == 0.8.*,
                    ConfigFile == 1.0.*,
                    Vec == 0.9.*,
                    NDArray == 0.1,
                    filepath == 1.1.*,
                    InfixApplicative == 1.*,
                    COrdering >= 2.3 && < 2.4,
                    AvlTree >= 4.2 && < 4.3

    Extra-Libraries: stdc++
-- @-node:gcross.20100302201317.1387:@thin CodeLattice.cabal
-- @-leo
